--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ngUG</title>
-  <base href="https://ronaldruiiz.github.io/ngUg/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://ronalruiiz.github.io/ngUg/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
